--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
 site_name: OpenBLAS
 theme:
   name: material
+  logo: logo.svg
+  favicon: logo.svg
+  palette:
+    primary: grey
 markdown_extensions:
   - admonition
   - pymdownx.details
