--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,3 +9,27 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+nav:
+  - index.md
+  - install.md
+  - packages.md
+  - user_manual.md
+  - faq.md
+  - use_visual_studio.md
+  - use_cortex.md
+  - import_mingw.md
+  - build/android.md
+  - build/ios.md
+  - build/m1.md
+  - build/win_arm.md
+  - extensions.md
+  - developers.md
+  - build_system.md
+  - distributing.md
+  - ci.md
+  - machine_list.md
+  - todo.md
+  - ecosystem.md
+  - publications.md
+  - mailing_list.md
+  - donate.md
